2005-09-08  Paul Brook  <paul@codesourcery.com>

	* reloc.c: Rename BFD_RELOC_ARM_SMI to BFD_RELOC_ARM_SMC.
	* bfd-in2.h: Regenerate.
	* libbfd.h: Regenerate.

2005-09-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1301
	* elflink.c (_bfd_elf_merge_symbol): Don't check undefined
	symbol introduced by "ld -u" for TLS.

2005-09-02  Paul Brook  <paul@codesourcery.com>

	* libbdf.h: Regenerate.
	* bfd-in2.h: Regenerate.
	* reloc.c: Add BFD_RELOC_ARM_T32_CP_OFF_IMM and
	BFD_RELOC_ARM_T32_CP_OFF_IMM_S2.

2005-09-01  Dmitry Diky <diwil@spec.ru>

	* elf32-msp430.c (msp430_elf_relax_delete_bytes): Do not adjust
	local symbols and move it to
	(msp430_elf_relax_adjust_locals): New function - walk over the
	sections in the bfd and adjust relocations as necessary.
	
2005-08-31  DJ Delorie  <dj@redhat.com>

	* elf32-i386.c (elf_i386_check_relocs): Don't cast a unary &
	address operator, as that breaks GCC's strict aliasing rules.
	(elf_i386_size_dynamic_sections): Avoid the need for type
	punning.
	* elf64-x86-64.c (elf_x86_64_check_relocs): Don't cast a unary
	& address operator, as that breaks GCC's strict aliasing
	rules.
	(elf_x86_64_size_dynamic_sections): Avoid the need for type
	punning.

2005-08-30  Phil Edwards  <phil@codesourcery.com>

	* config.bfd (i[3-7]86-*-vxworks):  Match vxworks* instead.

2005-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1247
	* elfxx-ia64.c (allocate_fptr): Check undefined symbol.

2005-08-29  Steven J. Hill <sjhill@realitydiluted.com>

	* elfxx-mips.c (_bfd_mips_elf_relocate_section): Initialise
	'value' to avoid compile time warning message.

2005-08-26  Christian Groessler  <chris@groessler.org>

	* coff-z8k.c: (r_jr, r_disp7, r_callr): Fix src_mask and dst_mask
	of HOWTO.
	(coff_z8k_select_reloc): Remove.
	(SELECT_RELOC): Remove.
	(coff_z8k_reloc_type_lookup): New function.
	(coff_bfd_reloc_type_lookup): Define.
	* configure.in: Add cofflink.lo to z8kcoff_vec.
	* configure: Regenerate.
	* reloc.c: (bfd_reloc_code_type): Add z8k relocations.